# VCC-URN

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PR_SUMMARY.md  README.md  _debug_api.py  _tmp_api_check.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  urn_manifest.db
.github/: instructions
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251027_0001_initial.py
app/: main.py
deployment/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml  service.yaml
docs/: BEST_PRACTICES.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW_SUMMARY.md  TODO.md  complete-guide.md  deployment-guide.md  development-strategy.md  introducing.md  on-premise-vendor-freedom.md  urn-spec.md
docs/adr/: 0001-themis-aql-statt-graphql.md  README.md
tests/: conftest.py  test_admin_catalogs.py  test_api.py  test_security.py  test_security_roles.py  test_service.py  test_state_catalogs.py  test_urn.py  test_urn_catalogs.py
vcc_urn/: __init__.py  config.py  db.py  federation.py  models.py  repository.py  runtime.py  schemas.py  security.py  service.py  urn.py
vcc_urn/api/: __init__.py
vcc_urn/api/admin/: __init__.py  dashboard.py  endpoints.py
vcc_urn/api/graphql/: README.md  resolvers.py  schema.py
vcc_urn/core/: __init__.py  config.py  federated_identity.py  logging.py  mtls.py  opa.py  redis_cache.py  runtime.py  security.py  security_middleware.py  service_discovery.py  tracing.py  validation.py
vcc_urn/db/: __init__.py  session.py
vcc_urn/integrations/: __init__.py  themis_aql.py  themis_gateway.py  themis_transactions.py  veritas.py
vcc_urn/models/: __init__.py  manifest.py
vcc_urn/repository/: __init__.py  manifest_repository.py
vcc_urn/services/: federation.py  urn.py  urn_service.py
vcc_urn/testing/: __init__.py  contract_testing.py
(+1 files in other folders)
